# ABZU

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .reading_complete  AGENTS.md  CHANGELOG.md  CHANGELOG_insight_matrix.md  CHANGELOG_rag_orchestrator.md  CHANGELOG_razar.md  CHANGELOG_vector_memory.md  CODEX_OF_CODEX.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  CRYSTAL_CODEX.md  Cargo.toml  Dockerfile  LICENSE_CRYSTAL.md  Makefile  PATENTS.md  README.md  README_CODE_FUNCTION.md  README_OPERATOR.md  README_QNL_OS.md  archetype_feedback_loop.py  archetype_shift_engine.py  aspect_processor.py  audio_engine.py  auto_retrain.py  commitlint.config.js  component_index.json  config.py  corpus_memory_logging.py  cortex_memory.py  coverage.json  coverage.mmd  crown_decider.py  crown_model_launcher.sh  crown_prompt_orchestrator.py  (+94 more)
.github/: CODEOWNERS  pull_request_template.md  settings.yml
GENESIS/: INANNA_AI_CORE_TRAINING.md  INANNA_AI_SACRED_PROTOCOL.md  README.md
IGNITION/: README.md
INANNA_AI/: GITHUB 20445dfc251d80658e31e0a752774bd9.md  INANNA_SONG.md  MARROW_CODE.md  MASTER PLAN 20445dfc251d80d09bfccb36f2711421.md  OVERVIEW.md  README.md  __init__.py  adaptive_learning.py  audio_emotion_listener.py  context.py  corpus_memory.py  db_storage.py  defensive_network_utils.py  emotion_analysis.py  emotional_memory.py  emotional_synaptic_engine.py  ethical_validator.py  existential_reflector.py  gate_orchestrator.py  gates.py  glm_analyze.py  glm_init.py  glm_integration.py  listening_engine.py  love_matrix.py  main.py  response_manager.py  retrain_and_deploy.py  rfa_7d.py  silence_reflection.py  sonic_emotion_mapper.py  speaking_engine.py  speech_loopback_reflector.py  stt_whisper.py  train_soul.py  tts_bark.py  tts_coqui.py  tts_tortoise.py  tts_xtts.py  utils.py  (+2 more)
INANNA_AI_AGENT/: README_INANNA_AI_AGENT.md  __init__.py  inanna_ai.py  model.py  preprocess.py  source_loader.py
MUSIC_FOUNDATION/: README_INANNA_MUSIC.md  README_MUSIC_QNL_OS.md  README_Music_Foundation.txt  __init__.py  human_music_to_qnl_converter.py  inanna_music_COMPOSER_ai.py  layer_generators.py  music_foundation.py  qnl_utils.py  seven_plane_analyzer.py  synthetic_stego.py  synthetic_stego_engine.py
NEOABZU/: Cargo.toml  Reignition.md  build_wheels.sh  pyproject.toml
NEOABZU/chakrapulse/: Cargo.toml
NEOABZU/chakrapulse/src/: lib.rs
NEOABZU/core/: Cargo.toml
NEOABZU/core/resources/: lexicon.ron
NEOABZU/core/src/: evaluator.rs  lib.rs  parser.rs
NEOABZU/core/src/sacred/: axioms.rs  mod.rs
NEOABZU/core/tests/: ceremony.rs  hero_journey.rs
NEOABZU/crown/: Cargo.toml  README.md
NEOABZU/crown/src/: lib.rs
NEOABZU/crown/tests/: identity_load.rs  insight.rs  insight_hooks.rs  kimicho_fallback.rs  legacy_parity.rs  memory_query.rs  python_parity.rs  razar_integration.rs  razar_legacy_parity.rs  razar_validator.rs  razor_integration.rs  route_decision.rs  route_query.rs  validator.rs
NEOABZU/docs/: Bana Narrator vision.md  OROBOROS_Engine.md  OROBOROS_Lexicon.md  Oroboros_Core.md  Oroboros_Engine.md  QNL_Library.md  SUMERIAN_33WORDS.md  SUMERIAN_SACRED_LEXICON.md  Scribe_narrative_engine.md  connector_api.md  convex_connector_evaluation.md  core_usage.md  feature_parity.md  herojourney_engine.md  index.md  insight.md  migration_crosswalk.md  nazarick_convex_poc.md  onboarding.md  rust_doctrine.md  videoa_agent_stack.md
NEOABZU/fusion/: Cargo.toml
NEOABZU/fusion/src/: lib.rs
NEOABZU/fusion/tests/: invariants.rs
NEOABZU/inanna/: Cargo.toml
NEOABZU/inanna/src/: lib.rs
NEOABZU/inanna/tests/: basic.rs
NEOABZU/insight/: Cargo.toml
NEOABZU/insight/src/: crown_bridge.rs  lib.rs
NEOABZU/insight/tests/: crown_bridge.rs  edge_cases.rs  integration.rs
NEOABZU/k2coder/: Cargo.toml
NEOABZU/k2coder/src/: lib.rs
NEOABZU/k2coder/tests/: fallback.rs
NEOABZU/kimicho/: Cargo.toml  README.md
NEOABZU/kimicho/src/: lib.rs
NEOABZU/kimicho/tests/: razar_integration.rs  razor_integration.rs
NEOABZU/memory/: Cargo.toml  README.md
NEOABZU/memory/src/: lib.rs
NEOABZU/memory/tests/: query.rs
NEOABZU/narrative/: Cargo.toml
NEOABZU/narrative/src/: journey.rs  lib.rs
NEOABZU/neoabzu/: __init__.py  core.py  crown.py  fusion.py  memory.py  numeric.py  persona.py  rag.py  vector.py  vector_pb2.py  vector_pb2_grpc.py
NEOABZU/numeric/: Cargo.toml
NEOABZU/numeric/src/: lib.rs
NEOABZU/persona/: Cargo.toml
NEOABZU/persona/src/: lib.rs
NEOABZU/rag/: Cargo.toml  README.md
NEOABZU/rag/src/: connector.rs  lib.rs  orchestrator.rs  ranker.rs
NEOABZU/rag/tests/: merge.rs  multi_source_ranking.rs  orchestrator.rs  plugins.rs  retrieval.rs
NEOABZU/razar/: Cargo.toml
NEOABZU/razar/src/: lib.rs
NEOABZU/razar/tests/: route.rs
NEOABZU/razor/: Cargo.toml
NEOABZU/razor/src/: lib.rs
NEOABZU/razor/tests/: route.rs
NEOABZU/tests/: first_ceremony.rs
NEOABZU/vector/: Cargo.toml  README.md  build.rs
NEOABZU/vector/proto/: vector.proto
NEOABZU/vector/src/: lib.rs  server.rs
NEOABZU/vector/tests/: grpc.rs  load_test.py  test_grpc_python.py
QNL_LANGUAGE/: CORE SYSTEM 20545dfc251d80018055fb4449aee959.md
SONS_FOR_TESTS/: README.md
SPIRAL_OS/: __init__.py  qnl_engine.py  symbolic_parser.py
agents/: __init__.py  event_bus.py  experience_replay.py  guardian.py  interaction_log.py  operator_dispatcher.py  sidekick_helper.py  task_orchestrator.py  vanna_data.py
albedo/: __init__.py  state_machine.py
api/: __init__.py  memory_introspect.py  server.py
audio/: __init__.py  audio_ingestion.py  dsp_engine.py  engine.py  mix_tracks.py  play_ritual_music.py  segment.py  voice_cloner.py
bana/: __init__.py  event_structurizer.py  narrative.py  narrative_api.py
benchmarks/: README.md  chat_gateway_benchmark.py  llm_throughput_benchmark.py  memory_store_benchmark.py  pyo3_call_latency.py  query_memory_bench.py  (+3 more)
crown/: Cargo.toml  replay_scenarios.yaml
crown/src/: lib.rs
instrumentation/: Cargo.toml
instrumentation/examples/: basic.rs
instrumentation/src/: lib.rs
numeric/: Cargo.toml
numeric/src/: lib.rs
persona/: Cargo.toml
persona/src/: lib.rs
(+1968 files in other folders)
