[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spiral-os"
version = "0.1.0"
description = "Spiral OS command line tools and agents"
authors = [{name = "Spiral OS Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE_CRYSTAL.md"}

# Runtime requirements mirrored from requirements.txt except heavy packages
# which are provided as optional extras
dependencies = [
    "openai-whisper==20231117",
    "TTS==0.22.0; python_version<'3.12'",
    "numpy==2.2.6",
    "scipy==1.16.1",
    "pandas==2.3.1",
    "librosa==0.11.0",
    "huggingface-hub==0.34.4",
    "sentencepiece==0.2.1",
    "accelerate==1.10.0",
    "einops==0.8.1",
    "scapy==2.6.1",
    "soundfile==0.13.1",
    "opensmile==2.5.1",
    "EmotiVoice==0.2.0",
    "voicefixer==0.1.3",
    "pydub==0.25.1",
    "requests==2.32.4",
    "beautifulsoup4==4.13.4",
    "streamlit==1.48.1",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "chromadb==1.0.17",
    "mlflow==3.2.0",
    "python-json-logger==3.3.0",
    "aiortc==1.13.0",
    "wav2lip==1.2.4",
    "psutil==7.0.0",
    "pyautogui==0.9.54",
    "opencv-python==4.12.0.88",
    "pytesseract==0.3.13",
    "selenium==4.35.0",
    "ultralytics==8.3.179",
    "langchain==0.3.27",
]

[project.optional-dependencies]
llm = [
    "torch==2.8.0",
    "transformers==4.55.2",
    "sentence-transformers==5.1.0",
    "stable-baselines3==2.7.0",
]

# Development extras mirror dev-requirements.txt
# including testing and formatting tools
dev = [
    "pytest==8.4.1",
    "markdown==3.8.2",
    "requests==2.32.4",
    "fastapi==0.116.1",
    "beautifulsoup4==4.13.4",
    "pyopenssl==25.1.0",
    "streamlit==1.48.1",
    "httpx==0.28.1",
    "black==25.1.0",
    "flake8==7.3.0",
    "isort==6.0.1",
    "pre-commit==4.3.0",
    "psutil==7.0.0",
]

[project.scripts]
os-guardian = "os_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "examples*"]

