[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spiral-os"
version = "0.1.0"
description = "Spiral OS command line tools and agents"
authors = [{name = "Spiral OS Team"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE_CRYSTAL.md"}

# Runtime requirements keep only lightweight essentials. Heavy or optional
# packages are defined in extras below.
dependencies = [
    "numpy==1.26.4",
    "requests==2.32.4",
    "python-json-logger==3.3.0",
    "pyyaml==6.0.2",
    "psutil==7.0.0"
]

[project.optional-dependencies]
llm = [
    "torch==2.8.0",  # heavy; slated for removal or replacement
    "transformers==4.55.2",
    "sentence-transformers==5.1.0",
    "stable-baselines3==2.7.0",  # heavy; slated for removal
    "huggingface-hub==0.34.4",
    "sentencepiece==0.2.1",
    "accelerate==1.10.0",
    "einops==0.8.1",
]

audio = [
    "librosa==0.11.0",
    "ffmpeg-python==0.2.0",
    "openai-whisper==20231117",  # heavy; consider replacement
    "soundfile==0.13.1",
    "opensmile==2.5.1",
    "voicefixer==0.1.3",
    "pydub==0.25.1",
    "scipy==1.11.4",
    "wav2lip==1.2.4",  # heavy; slated for removal
    "EmotiVoice==0.2.0",  # heavy; slated for removal
]

ml = [
    "chromadb==1.0.17",
    "mlflow==3.2.0",
    "langchain==0.3.27",
    "pandas==1.5.3",
]

vision = [
    "aiortc==1.13.0",
    "pyautogui==0.9.54",
    "opencv-python==4.12.0.88",
    "pytesseract==0.3.13",
    "selenium==4.35.0",
    "ultralytics==8.3.179",  # heavy; slated for removal
]

web = [
    "fastapi==0.116.1",
    "pymediasoup==0.3.1",
    "uvicorn==0.35.0",
    "streamlit==1.48.1",
    "beautifulsoup4==4.13.4",
]

network = [
    "scapy==2.6.1",
]

# Development extras mirror dev-requirements.txt
# including testing and formatting tools
dev = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "soundfile==0.13.1",
    "librosa==0.11.0",
    "pydub==0.25.1",
    "pytest==8.4.1",
    "markdown==3.8.2",
    "requests==2.32.4",
    "fastapi==0.116.1",
    "beautifulsoup4==4.13.4",
    "pyopenssl==25.1.0",
    "streamlit==1.48.1",
    "python-json-logger==3.3.0",
    "httpx==0.28.1",
    "scikit-learn==1.7.1",
    "jupyter==1.1.1",
    "black==25.1.0",
    "flake8==7.3.0",
    "isort==6.0.1",
    "pre-commit==4.3.0",
    "psutil==7.0.0",
]

[project.scripts]
os-guardian = "os_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "examples*"]


[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
