[package]
name = "neoabzu-crown"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoabzu_crown"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
neoabzu-memory = { path = "../NEOABZU/memory" }

tracing = { version = "0.1", optional = true }
neoabzu-instrumentation = { path = "../instrumentation", optional = true }
metrics = "0.21"

[features]
default = []
tracing = ["dep:tracing", "dep:neoabzu-instrumentation"]
