[package]
name = "neoabzu-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoabzu_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "auto-initialize"] }
tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.21", optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
neoabzu-narrative = { path = "../narrative" }

[features]
default = []
tracing = ["dep:tracing"]
opentelemetry = ["tracing", "dep:opentelemetry", "dep:tracing-opentelemetry"]

[dev-dependencies]
tracing-subscriber = "0.3"
