[package]
name = "neoabzu-crown"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoabzu_crown"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
neoabzu-memory = { path = "../memory" }
neoabzu-rag = { path = "../rag" }
neoabzu-insight = { path = "../insight" }
neoabzu-core = { path = "../core" }
neoabzu-chakrapulse = { path = "../chakrapulse" }

[features]
default = []

[dev-dependencies]
httpmock = "0.6"
neoabzu-kimicho = { path = "../kimicho" }
tempfile = "3"
