[package]
name = "neoabzu-fusion"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoabzu_fusion"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]
