[package]
name = "neoabzu-fusion"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoabzu_fusion"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]
tracing = ["dep:tracing"]
