[package]
name = "neoabzu-insight"
version = "0.1.1"
edition = "2021"

[lib]
name = "neoabzu_insight"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
tracing = { version = "0.1", optional = true }
metrics = "0.21"

[features]
default = []
tracing = ["dep:tracing"]
