[package]
name = "neoabzu-kimicho"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoabzu_kimicho"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.19"
serde_json = "1.0"
tracing = { version = "0.1", optional = true }
neoabzu-instrumentation = { path = "../../instrumentation", optional = true }

[features]
default = []
tracing = ["dep:tracing", "dep:neoabzu-instrumentation"]

[dev-dependencies]
httpmock = "0.6"
