[package]
name = "neoabzu-persona"
version = "0.1.0"
edition = "2021"

[lib]
name = "neoabzu_persona"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
