[package]
name = "neoabzu-vector"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "neoabzu_vector"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", default-features = false, features = ["macros"] }
tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.21", optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.12"
metrics = "0.21"
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[features]
default = ["pyo3/auto-initialize"]
python-extension = ["pyo3/extension-module"]
tracing = ["dep:tracing"]
opentelemetry = ["tracing", "dep:opentelemetry", "dep:tracing-opentelemetry"]

[build-dependencies]
tonic-build = "0.11"
